--- a/midtermExam1.tex
+++ b/midtermExam1.tex
@@ -457,6 +457,21 @@
             $
             \\
             \\
+            To find the radiation pressure $P$ we need to integrate Maxwell’s stress tensor. Since $B=0$ then $S=0$.
+            \\
+            \\
+            $
+              F=\bigoint\limits_{S} \overleftrightarrow{T}.da-\epsilon_0 \mu_0 \dfrac{d}{dt} \bigints\limits_{v} S d\tau
+              =\bigoint\limits_{S} \overleftrightarrow{T}.da-\epsilon_0 \mu_0 \dfrac{d}{dt} \bigints\limits_{v} 0 \times d\tau
+              \\
+              \\
+              \\
+              \therefore ~~~ F=\bigoint\limits_{S} \overleftrightarrow{T}.da
+            $
+            \\
+            \\
+            \emph{Physically, $\overleftrightarrow{T}$ is the force per unit area (or stress) acting on the surface.}
+            \textbf{Sadly}, I am not sure how to take the integral of this Maxwell's stress tensor.
           }
         
       \end{enumerate}
